--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -23,8 +23,9 @@ monitor=DP-1, 3840x2160@59, 1920x0, 1
 # exec-once = waybar & hyprpaper & firefox
 
 # Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
 source = ~/.config/hypr/mocha.conf
+
+exec-once=bash ~/.config/hypr/start.sh
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -117,6 +118,7 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrule = float, ^(vimiv)$
 windowrule = opacity 0.9 0.7, ^(kitty)$
 windowrule = opacity 0.95 0.8, ^(obsidian)$
 
@@ -170,6 +172,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-exec-once=bash ~/.config/hypr/start.sh
-
